CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(CUDA_C_Programing)

INCLUDE_DIRECTORIES(./)

find_package(CUDA)

if(CUDA_FOUND)
    message("CUDA Found")
    list(APPEND CUDA_NVCC_FLAGS "-arch=sm_80;-O2;")
endif(CUDA_FOUND)


ADD_SUBDIRECTORY(Chapter1)
ADD_SUBDIRECTORY(Chapter2)
ADD_SUBDIRECTORY(Chapter3)
ADD_SUBDIRECTORY(Chapter4)
ADD_SUBDIRECTORY(Chapter5)
#ADD_SUBDIRECTORY(LUD)
ADD_SUBDIRECTORY(Gemm)
